--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
             align-items: center;
             justify-content: center;
             gap: 5px;
+            width: 100px;
+            max-width: 100px;
         }
         
         .text {
